* The Output Options page was redesigned for better usability
* The translation dll's size was decreased by 1/3
* Ticket #2227, Hide the seek bar in capture mode
* Ticket #2276, Use the new user interface on Vista and later for the Save dialogs
* Ticket #2342, MPC-HC will now use the Windows theme font for the Statusbar, OSD messages
  and a few other places on Windows Vista and newer
* Ticket #2378, Move the "Remember last playlist" option into the Options dialog
! The hand cursor wasn't shown in the web links in Keys and WebServer options page
! Toolbar code cleanup and background fix for Windows XP
! The last textbox used in the Goto dialog was not remembered since r3964 and r3965
! Always show an error message instead of crashing when the argument of a command line
  switch is missing
! OggSplitter: Fix crash with some files
! Logitech Keyboard support updated and made optional (Options -> Tweaks)
! WebServer: various bugfixes and improvements
! Ticket #504, Fixed rounding errors that prevented a properly centered image
  and caused unneeded resizing because the video size was off by one
! Ticket #2330, Fix the radio buttons in the Logo options page
! Ticket #2349, Recent Files: "Clear List" did not remove all files from the list
! Ticket #2356, The "With icons" and "File(s)" options in the Formats options page
  were not applied if no association was previously modified
! Ticket #2362, [DVB] Fix the Electronic Program Guide (EPG):
    - Fix the parsing of the event's information
    - Fix the parsing of the characters' encoding
    - Fix the display of the start and end time when DST is observed
! Ticket #2363, Fix keys and mouse buttons handling when using D3D Fullscreen
! Ticket #2365, The volume slider wasn't properly redrawn in some cases
! Ticket #2427, The command line was not parsed when using slave mode
! Ticket #2493, Fix a crash when saving subtitles using the sub format
! Numerous other bugfixes and improvements